--- a/capstone/app/src/main/res/navigation/main_nav_graph.xml
+++ b/capstone/app/src/main/res/navigation/main_nav_graph.xml
@@ -53,6 +53,17 @@
         android:id="@+id/profileFragment"
         android:name="com.example.capstone.ui.main.ProfileFragment"
         android:label="프로필"
-        tools:layout="@layout/fragment_profile" />
+        tools:layout="@layout/fragment_profile">
+        <action
+            android:id="@+id/action_profileFragment_to_authActivity"
+            app:destination="@id/authActivity"
+            app:popUpTo="@id/main_nav_graph"
+            app:popUpToInclusive="true" />
+    </fragment>
+    
+    <activity
+        android:id="@+id/authActivity"
+        android:name="com.example.capstone.ui.auth.AuthActivity"
+        android:label="로그인" />
 
 </navigation> 
