--- a/capstone/app/src/main/res/navigation/main_nav_graph.xml
+++ b/capstone/app/src/main/res/navigation/main_nav_graph.xml
@@ -3,26 +3,34 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_nav_graph"
-    app:startDestination="@id/serverListFragment">
+    app:startDestination="@id/groupListFragment">
 
     <fragment
-        android:id="@+id/serverListFragment"
-        android:name="com.example.capstone.ui.main.ServerListFragment"
-        android:label="서버 목록"
-        tools:layout="@layout/fragment_server_list">
+        android:id="@+id/groupListFragment"
+        android:name="com.example.capstone.ui.main.GroupListFragment"
+        android:label="그룹 목록"
+        tools:layout="@layout/fragment_group_list">
         <action
-            android:id="@+id/action_serverListFragment_to_createServerFragment"
-            app:destination="@id/createServerFragment" />
+            android:id="@+id/action_groupListFragment_to_createGroupFragment"
+            app:destination="@id/createGroupFragment" />
         <action
-            android:id="@+id/action_serverListFragment_to_channelListFragment"
+            android:id="@+id/action_groupListFragment_to_channelListFragment"
             app:destination="@id/channelListFragment" />
+        <action
+            android:id="@+id/action_groupListFragment_to_chatFragment"
+            app:destination="@id/chatFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"
+            app:launchSingleTop="true" />
     </fragment>
 
     <fragment
-        android:id="@+id/createServerFragment"
-        android:name="com.example.capstone.ui.main.CreateServerFragment"
-        android:label="서버 만들기"
-        tools:layout="@layout/fragment_create_server" />
+        android:id="@+id/createGroupFragment"
+        android:name="com.example.capstone.ui.main.CreateGroupFragment"
+        android:label="그룹 만들기"
+        tools:layout="@layout/fragment_create_group" />
 
     <fragment
         android:id="@+id/channelListFragment"
