--- a/capstone/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/capstone/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/navigation_servers"
+        android:id="@+id/navigation_groups"
         android:icon="@drawable/ic_servers"
-        android:title="서버" />
+        android:title="그룹" />
     <item
         android:id="@+id/navigation_friends"
         android:icon="@drawable/ic_friends"
