--- a/capstone/app/src/main/res/values/colors.xml
+++ b/capstone/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray_600">#757575</color>
     
     <!-- 채팅 앱 색상 -->
     <color name="background_dark">#2C2F33</color>
